--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <p>home works!</p>
 
 <div *ngIf="wheatherInfo$ | async as wheather">
-    {{ wheather.main.temp | kelvinToCelsius}} C
+    {{ wheather.main.temp | kelvinToCelsius}} °C
 </div>
