adicionando novo layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<div>
+    <app-navbar style="height: 50rem; width: 8rem;"></app-navbar>
+    <app-search style="height: 2.5rem; width: 40rem;"></app-search>
+    <router-outlet style="width:50rem;"></router-outlet>
+</div>
