--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
-<ng-container *ngIf="wheather">
-    <app-card-weather [temperatura]="wheather.main.temp" [cidade]="wheather.name"
-        [sensacaoTermica]="wheather.main.feels_like" [tempo]="main" [descricao]="description"></app-card-weather>
-</ng-container>
+<div>
+    <ng-container *ngIf="wheather">
+        <app-card-weather [temperatura]="wheather.main.temp" [cidade]="wheather.name"
+            [sensacaoTermica]="wheather.main.feels_like" [tempo]="main" [descricao]="description"></app-card-weather>
+    </ng-container>
+</div>
