ajustes card-wheather component

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
-div {
+.container {
     display: grid;
-    grid-template-columns: 9% 91%;
-    grid-template-rows: 10% 90%;
-    margin-top: 24px;
+    grid-template-columns: 8rem 1fr;
+    height: 95%;
+    margin: 16px;
+    gap: 24px;
 }
