--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container__home">
     <ng-container *ngIf="wheather">
         <app-card-weather [temperatura]="wheather.main.temp" [cidade]="wheather.name"
             [sensacaoTermica]="wheather.main.feels_like" [tempo]="main" [descricao]="description"></app-card-weather>
