--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
-<div>
-    <app-navbar style="height: 50rem; width: 8rem;"></app-navbar>
-    <app-search style="height: 2.5rem; width: 40rem;"></app-search>
-    <router-outlet style="width:50rem;"></router-outlet>
+<div class="container">
+    <div>
+        <app-navbar></app-navbar>
+    </div>
+    <div style="height: 2.5rem; width: 40%;">
+        <app-search></app-search>
+        <div>
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
