--- a/src/app/shared/components/card-weather/card-weather.component.html
+++ b/src/app/shared/components/card-weather/card-weather.component.html
@@ -1,10 +1,12 @@
 <section class="card">
-    <p class="card__titulo">Clima</p>
     <section class="card__info">
-        <img [src]="alterarIcone(tempo)" />
-        <p>{{ temperatura | kelvinToCelsius }}°C</p>
-        <p>{{ cidade }}</p>
-        <p>{{ tempo | translate }}: <span>{{ descricao }}</span></p>
-        <p>Sensação térmica: <span>{{ sensacaoTermica | kelvinToCelsius }}°C</span></p>
+        <div>
+            <p class="card__titulo">{{ cidade }}</p>
+            <p class="card__descricao">{{ tempo | translate }}: <span>{{ descricao }}</span></p>
+            <p class="card__temperatura">{{ temperatura | kelvinToCelsius }}°C</p>
+        </div>
+        <div>
+            <img [src]="alterarIcone(tempo)" />
+        </div>
     </section>
 </section>
