feat: adicionando today-forecast component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,6 @@
         <app-card-weather [temperatura]="wheather.main.temp" [cidade]="wheather.name"
             [sensacaoTermica]="wheather.main.feels_like" [tempo]="main" [descricao]="description"></app-card-weather>
     </ng-container>
+
+    <app-today-forecast></app-today-forecast>
 </div>
