--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-  --primary-color: #202B3B;
-  --text-color: #7A828F;
-  --secondary-color: #0B131E;
-  --white-color: #DDE0E4;
+  --primary-color: rgb(32, 43, 59);
+  --text-color: #9399A2;
+  --secondary-color: rgb(11, 19, 30);
+  --white-color: #F0F1F1;
 }
 
 * {
