--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -1,12 +1,13 @@
 aside {
     background-color: var(--primary-color);
     height: 100%;
-    border-radius: 8px;
+    border-radius: 24px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
+    width: 94px;
 }
 
 article {
