fix: ajustes navbar

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,19 +1,23 @@
-<aside>
-    <img src="../../../../assets/images/umbrella.png" alt="">
-    <article>
-        <img class="icon" src="../../../../assets/images/rainy-day.png" alt="">
-        <p>Tempo</p>
-    </article>
-    <article>
-        <img class="icon" src="../../../../assets/images/architecture-and-city.png" alt="">
-        <p>Cidades</p>
-    </article>
-    <article>
-        <img class="icon" src="../../../../assets/images/map.png" alt="">
-        <p>Mapa</p>
-    </article>
-    <article>
-        <img class="icon" src="../../../../assets/images/settings.png" alt="">
-        <p>Configurações</p>
-    </article>
+<aside class="navbar">
+    <div class="navbar__umbrella">
+        <img src="../../../../assets/images/umbrella.png" alt="">
+    </div>
+    <div class="navbar__icons">
+        <article>
+            <img class="icon" src="../../../../assets/images/rainy-day.png" alt="">
+            <p class="navbar__text">Tempo</p>
+        </article>
+        <article>
+            <img class="icon" src="../../../../assets/images/architecture-and-city.png" alt="">
+            <p class="navbar__text">Cidades</p>
+        </article>
+        <article>
+            <img class="icon" src="../../../../assets/images/map.png" alt="">
+            <p class="navbar__text">Mapa</p>
+        </article>
+        <article>
+            <img class="icon" src="../../../../assets/images/settings.png" alt="">
+            <p class="navbar__text">Configurações</p>
+        </article>
+    </div>
 </aside>
