feat: adicionando integração com API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div>
         <app-navbar></app-navbar>
     </div>
-    <div style="height: 2.5rem; width: 40%;">
+    <div style="height: 2.5rem; width: 46rem;">
         <app-search></app-search>
         <div>
             <router-outlet></router-outlet>
