--- a/src/app/shared/components/today-forecast/today-forecast.component.html
+++ b/src/app/shared/components/today-forecast/today-forecast.component.html
@@ -1,48 +1,16 @@
 <div class="container">
     <p class="container__text"><strong>PREVISÃO DE HOJE</strong></p>
     <div class="container__forecast--wrapper">
-        <div class="container__forecast">
-            <p class="container__text"><strong>6:00 AM</strong></p>
-            <div>
-                <img style="width: 64px; height: 64px;object-fit: cover;" src="../../../../assets/images/raining.png">
+        <ng-container *ngFor="let todayForecast of todayForecasts">
+            <div class="container__forecast">
+                <p class="container__text"><strong>{{ todayForecast.time }}</strong></p>
+                <div>
+                    <img style="width: 64px; height: 64px; object-fit: cover;"
+                        src="../../../../assets/images/raining.png">
+                </div>
+                <p class="container__temperature"><strong>{{ todayForecast.temperature }}°</strong></p>
             </div>
-            <p class="container__temperature"><strong>25°</strong></p>
-        </div>
-        <div class="container__line"></div>
-
-        <div class="container__forecast">
-            <p class="container__text"><strong>6:00 AM</strong></p>
-            <div>
-                <img style="width: 64px; height: 64px;object-fit: cover;" src="../../../../assets/images/raining.png">
-            </div>
-            <p class="container__temperature"><strong>25°</strong></p>
-        </div>
-        <div class="container__line"></div>
-
-        <div class="container__forecast">
-            <p class="container__text"><strong>6:00 AM</strong></p>
-            <div>
-                <img style="width: 64px; height: 64px;object-fit: cover;" src="../../../../assets/images/raining.png">
-            </div>
-            <p class="container__temperature"><strong>25°</strong></p>
-        </div>
-        <div class="container__line"></div>
-
-        <div class="container__forecast">
-            <p class="container__text"><strong>6:00 AM</strong></p>
-            <div>
-                <img style="width: 64px; height: 64px;object-fit: cover;" src="../../../../assets/images/raining.png">
-            </div>
-            <p class="container__temperature"><strong>25°</strong></p>
-        </div>
-        <div class="container__line"></div>
-
-        <div class="container__forecast">
-            <p class="container__text"><strong>6:00 AM</strong></p>
-            <div>
-                <img style="width: 64px; height: 64px;object-fit: cover;" src="../../../../assets/images/raining.png">
-            </div>
-            <p class="container__temperature"><strong>25°</strong></p>
-        </div>
+            <div class="container__line" *ngIf="todayForecast.time !==  '21:00'"></div>
+        </ng-container>
     </div>
 </div>
