fix: ajustes home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,4 +7,6 @@
     <ng-container>
         <app-today-forecast [todayForecasts]="todayForecasts"></app-today-forecast>
     </ng-container>
+
+    <app-air-conditions></app-air-conditions>
 </div>
