--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
   --primary-color: rgb(32, 43, 59);
   --text-color: #9399A2;
   --secondary-color: rgb(11, 19, 30);
+  --secondary-text-color: #c4cad3;
   --white-color: #F0F1F1;
 }
 
