fix: ajustes ícones navbar

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,19 +4,19 @@
     </div>
     <div class="navbar__icons">
         <article>
-            <img class="icon" src="../../../../assets/images/rainy-day.png" alt="">
+            <img class="icon" src="../../../../assets/images/weather-icon.svg" alt="">
             <p class="navbar__text">Tempo</p>
         </article>
         <article>
-            <img class="icon" src="../../../../assets/images/architecture-and-city.png" alt="">
+            <img class="icon" src="../../../../assets/images/cities-icon.svg" alt="">
             <p class="navbar__text">Cidades</p>
         </article>
         <article>
-            <img class="icon" src="../../../../assets/images/map.png" alt="">
+            <img class="icon" src="../../../../assets/images/map-icon.svg" alt="">
             <p class="navbar__text">Mapa</p>
         </article>
         <article>
-            <img class="icon" src="../../../../assets/images/settings.png" alt="">
+            <img class="icon" src="../../../../assets/images/settings-icon.svg" alt="">
             <p class="navbar__text">Configurações</p>
         </article>
     </div>
