--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
   --secondary-color: rgb(11, 19, 30);
   --secondary-text-color: #c4cad3;
   --white-color: #F0F1F1;
+  --terciary-color: #44A3FF;
 }
 
 * {
