adicionando novo event emitter no component air conditions

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,5 +8,5 @@
         <app-today-forecast [todayForecasts]="todayForecasts"></app-today-forecast>
     </ng-container>
 
-    <app-air-conditions></app-air-conditions>
+    <app-air-conditions (seeMoreEvent)="teste($event)"></app-air-conditions>
 </div>
