--- a/src/app/shared/components/air-conditions/air-conditions.component.html
+++ b/src/app/shared/components/air-conditions/air-conditions.component.html
@@ -1,5 +1,10 @@
 <div class="container">
-    <p class="container__text"><strong>CONDIÇÕES DO AR</strong></p>
+    <p class="container__text">
+        <strong>CONDIÇÕES DO AR</strong>
+        <span>
+            <button (click)="emitClickOnSeeMore()">Saiba mais</button>
+        </span>
+    </p>
 
     <div class="container__wrapper">
         <div class="container__info">
