--- a/src/app/shared/components/air-conditions/air-conditions.component.scss
+++ b/src/app/shared/components/air-conditions/air-conditions.component.scss
@@ -16,6 +16,22 @@
     &__text {
         font-size: 14px;
         color: var(--text-color);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        button {
+            all: unset;
+            background-color: var(--terciary-color);
+            color: var(--white-color);
+            font-weight: bold;
+            border-radius: 14px;
+            width: 5rem;
+            height: 1.5rem;
+            font-size: 12px;
+            text-align: center;
+            cursor: pointer;
+        }
     }
 
     &__info {
