fix: ajustes no component today-forecast

--- a/src/app/shared/components/today-forecast/today-forecast.component.html
+++ b/src/app/shared/components/today-forecast/today-forecast.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <p class="container__text"><strong>PREVISÃO DE HOJE</strong></p>
+    <p class="container__title"><strong>PREVISÃO DE HOJE</strong></p>
     <div class="container__forecast--wrapper">
         <ng-container *ngFor="let todayForecast of todayForecasts; let i = index">
             <div class="container__forecast">
