--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,12 @@
 .container__home {
     margin: 24px 0;
-    width: 100%; 
+    width: 100%;
     height: 100%;
+}
+
+.cards-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 24px;
+    row-gap: 16px;
 }
