feat: adding route to cities by clicking in search component

--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,1 +1,8 @@
-<input type="search" id="site-search" name="q" placeholder="Procure por cidades">
+<input
+  type="search"
+  id="site-search"
+  name="q"
+  placeholder="Procure por cidades"
+  [formControl]="cities"
+  (click)="navigateToCitiesPage()"
+/>
