--- a/src/app/shared/components/card-weather/card-weather.component.scss
+++ b/src/app/shared/components/card-weather/card-weather.component.scss
@@ -23,7 +23,7 @@
         justify-content: space-between;
 
         img {
-            object-fit: contain;
+            object-fit: none;
             height: 10rem;
             width: 8rem;
         }
