--- a/src/app/shared/components/card-info/card-info.component.html
+++ b/src/app/shared/components/card-info/card-info.component.html
@@ -2,7 +2,9 @@
   <div class="container__info">
     <div class="container__info--wrapper">
       <img class="container__info--icon" [src]="icon" />
-      <span class="container__info--title">{{ title }}</span>
+      <span class="container__info--title"
+        ><strong>{{ title }}</strong></span
+      >
     </div>
     <p class="container__info--value">{{ value }}</p>
   </div>
